--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGODB_URI=mongodb+srv://abidsafi:safi%401002@cluster0.yftoheu.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+SECRET_KEY = "safi@1002"
