--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^7.8.1",
     "react-spinners": "^0.17.0",
     "redux-persist": "^6.0.0",
+    "swiper": "^12.0.2",
     "yup": "^1.7.0"
   },
   "devDependencies": {
